# moab

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  box2.h  box2_test.cc  interval.h  interval_test.cc  moab.h  operation.h  operation_test.cc  point2.h  point2_test.cc  point3.h  point3_test.cc  ring2.h  ring2_test.cc  rtree.h  rtree_test.cc  segment2.h  segment2_test.cc  segment3.h  segment3_test.cc
moab/: BUILD.bazel  box2.h  box2.proto  box2_test.cc  interval.h  interval_test.cc  moab.h  operation.h  operation_test.cc  point2.h  point2.proto  point2_test.cc  point3.h  point3.proto  point3_test.cc  ring2.h  ring2_test.cc  rtree.h  rtree_test.cc  segment2.h  segment2.proto  segment2_test.cc  segment3.h  segment3.proto  segment3_test.cc  vector2.h  vector2.proto  vector2_test.cc  vector_operation.h  vector_operation_test.cc
