
package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

cc_library(
    name = "point2",
    hdrs = ["point2.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "point2_test",
    size = "small",
    srcs = ["point2_test.cc"],
    deps = [
        ":point2",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@com_google_absl//absl/hash:hash_testing",
    ],
)
