
package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

cc_library(
    name = "point2",
    hdrs = ["point2.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_library(
    name = "point3",
    hdrs = ["point3.h"],
    deps = [
        "@third_party_absl//absl/log:check",
        "@third_party_absl//absl/log:log",
        "@third_party_absl//absl/strings",
        "@third_party_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "point2_test",
    size = "small",
    srcs = ["point2_test.cc"],
    deps = [
        ":point2",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/hash:hash_testing",
    ],
)

cc_library(
    name = "interval",
    hdrs = ["interval.h"],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "interval_test",
    size = "small",
    srcs = ["interval_test.cc"],
    deps = [
        ":interval",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/hash:hash_testing",
    ],
)

cc_library(
    name = "box2",
    hdrs = ["box2.h"],
    deps = [
        ":point2",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "box2_test",
    size = "small",
    srcs = ["box2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/hash:hash_testing",
    ],
)

cc_library(
    name = "moab",
    hdrs = ["moab.h"],
    deps = [
        ":box2",
        ":interval",
        ":point2",
    ],
)


cc_test(
    name = "point3_test",
    size = "small",
    srcs = ["point3_test.cc"],
    deps = [
        ":point3",
        "@third_party_googletest//:gtest",
        "@third_party_googletest//:gtest_main",
    ],
)