package(default_visibility = ["//visibility:public"])

cc_library(
    name = "point2",
    hdrs = ["point2.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "point2_test",
    size = "small",
    srcs = ["point2_test.cc"],
    deps = [
        ":point2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "point3",
    hdrs = ["point3.h"],
    deps = [
        "@boost//:geometry",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "point3_test",
    size = "small",
    srcs = ["point3_test.cc"],
    deps = [
        ":point3",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment2",
    hdrs = ["segment2.h"],
    deps = [
        "point2",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "segment2_test",
    size = "small",
    srcs = ["segment2_test.cc"],
    deps = [
        ":segment2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval",
    hdrs = ["interval.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "interval_test",
    size = "small",
    srcs = ["interval_test.cc"],
    deps = [
        ":interval",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "box2",
    hdrs = ["box2.h"],
    deps = [
        ":interval",
        ":point2",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "box2_test",
    size = "small",
    srcs = ["box2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "moab",
    hdrs = ["moab.h"],
    deps = [
        ":box2",
        ":interval",
        ":point2",
        ":point3",
        ":segment2",
    ],
)
