"""
Bazel now uses Bzlmod by default to manage external dependencies.
Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.

For more details, please check https://github.com/bazelbuild/bazel/issues/18958
"""
module(name = "moab")

#############################
# Bazel rules.
#############################
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_proto", version = "7.1.0")

#############################
# External dependencies.
#############################
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")

bazel_dep(name = "boost.geometry", version = "1.87.0")
bazel_dep(name = "boost.polygon", version = "1.87.0")

## Google test.
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
