package(default_visibility = ["//visibility:public"])

cc_library(
    name = "point2",
    hdrs = ["point2.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "point2_test",
    size = "small",
    srcs = ["point2_test.cc"],
    deps = [
        ":point2",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "point3",
    hdrs = ["point3.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
    ],
)

cc_test(
    name = "point3_test",
    size = "small",
    srcs = ["point3_test.cc"],
    deps = [
        ":point3",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment2",
    hdrs = ["segment2.h"],
    deps = [
        "point2",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "segment2_test",
    size = "small",
    srcs = ["segment2_test.cc"],
    deps = [
        ":segment2",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment3",
    hdrs = ["segment3.h"],
    deps = [
        "point3",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "segment3_test",
    size = "small",
    srcs = ["segment3_test.cc"],
    deps = [
        ":segment3",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval",
    hdrs = ["interval.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "interval_test",
    size = "small",
    srcs = ["interval_test.cc"],
    deps = [
        ":interval",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "box2",
    hdrs = ["box2.h"],
    deps = [
        ":interval",
        ":point2",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "box2_test",
    size = "small",
    srcs = ["box2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ring2",
    hdrs = ["ring2.h"],
    deps = [
        ":box2",
        ":operation",
        ":point2",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "ring2_test",
    size = "small",
    srcs = ["ring2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        ":ring2",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "operation",
    hdrs = ["operation.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "operation_test",
    size = "small",
    srcs = ["operation_test.cc"],
    deps = [
        ":box2",
        ":interval",
        ":operation",
        ":point2",
        ":ring2",
        ":segment2",
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rtree",
    hdrs = ["rtree.h"],
    deps = [
        ":box2",
        ":operation",
        ":point2",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@boost//:geometry",
    ],
)

cc_test(
    name = "rtree_test",
    size = "small",
    srcs = ["rtree_test.cc"],
    deps = [
        ":box2",
        ":point2",
        ":rtree",
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "moab",
    hdrs = ["moab.h"],
    deps = [
        ":box2",
        ":interval",
        ":operation",
        ":point2",
        ":point3",
        ":ring2",
        ":rtree",
        ":segment2",
        ":segment3",
    ],
)
