package(default_visibility = ["//visibility:public"])

cc_library(
    name = "point2",
    hdrs = ["point2.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "point2_test",
    size = "small",
    srcs = ["point2_test.cc"],
    deps = [
        ":point2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "point3",
    hdrs = ["point3.h"],
    deps = [
        "@boost//:geometry",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "point3_test",
    size = "small",
    srcs = ["point3_test.cc"],
    deps = [
        ":point3",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment2",
    hdrs = ["segment2.h"],
    deps = [
        "point2",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "segment2_test",
    size = "small",
    srcs = ["segment2_test.cc"],
    deps = [
        ":segment2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "segment3",
    hdrs = ["segment3.h"],
    deps = [
        "point3",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "segment3_test",
    size = "small",
    srcs = ["segment3_test.cc"],
    deps = [
        ":segment3",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval",
    hdrs = ["interval.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "interval_test",
    size = "small",
    srcs = ["interval_test.cc"],
    deps = [
        ":interval",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "box2",
    hdrs = ["box2.h"],
    deps = [
        ":interval",
        ":point2",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "box2_test",
    size = "small",
    srcs = ["box2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "ring2",
    hdrs = ["ring2.h"],
    deps = [
        ":box2",
        ":operation",
        ":point2",
        "@boost//:geometry",
        "@boost//:polygon",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "ring2_test",
    size = "small",
    srcs = ["ring2_test.cc"],
    deps = [
        ":box2",
        ":point2",
        ":ring2",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "operation",
    hdrs = ["operation.h"],
    deps = [
        "@boost//:geometry",
        "@boost//:polygon",
    ],
)

cc_test(
    name = "operation_test",
    size = "small",
    srcs = ["operation_test.cc"],
    deps = [
        ":box2",
        ":interval",
        ":operation",
        ":point2",
        ":ring2",
        ":segment2",
        "@com_google_absl//absl/log",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rtree",
    hdrs = ["rtree.h"],
    deps = [
        ":box2",
        ":operation",
        ":point2",
        "@boost//:geometry",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "rtree_test",
    size = "small",
    srcs = ["rtree_test.cc"],
    deps = [
        ":box2",
        ":point2",
        ":rtree",
        "@com_google_absl//absl/log",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "moab",
    hdrs = ["moab.h"],
    deps = [
        ":box2",
        ":interval",
        ":operation",
        ":point2",
        ":point3",
        ":ring2",
        ":rtree",
        ":segment2",
        ":segment3",
    ],
)
